tests/bad_pub_block.stderr
tests/bad_pub_block.sl:2:5: error: SL1005: expected declaration
